--- a/src/modules/pv/README
+++ b/src/modules/pv/README
@@ -189,11 +189,15 @@ Chapter 1. Admin Guide
 
 3.1. shvset (string)
 
-   Set the value of a shared variable ($shv(name)). The parameter can be
-   set many times.
+   Set the initial value of a shared variable ($shv(name)). The parameter
+   can be set many times.
 
    The value of the parameter has the format: _name_ '=' _type_ ':'
    _value_
+
+   Note: this is special useful for usage with KEMI scripts, the $shv(...)
+   variables must be defined during Kamailio initialization in order to
+   become available in all worker processes.
      * _name_: shared variable name
      * _type_: type of the value
           + “i”: integer value
