--- a/pkg/kamailio/deb/debian/changelog
+++ b/pkg/kamailio/deb/debian/changelog
@@ -1,3 +1,9 @@
+kamailio (5.5.0~dev5) unstable; urgency=medium
+
+  * version set 5.5.0~dev5
+
+ -- Victor Seva <vseva@debian.org>  Wed, 24 Mar 2021 12:08:26 +0100
+
 kamailio (5.5.0~dev4) unstable; urgency=medium
 
   * version set 5.5.0~dev4
