modules: readme files regenerated - stirshaken ... [skip ci]

--- a/src/modules/stirshaken/README
+++ b/src/modules/stirshaken/README
@@ -119,9 +119,13 @@ Chapter 1. Admin Guide
    argument. For call verification three methods are available:
    stirshaken_check_identity() (through Verification Service),
    stirshaken_check_identity_with_key(key) and
-   stirshaken_check_identity_with_cert(cert). Only
-   stirshaken_check_identity() may download certificate (if needed) and
-   check it with X509 certificate path check algorithm.
+   stirshaken_check_identity_with_cert(cert). stirshaken_check_identity()
+   offers the most comprehensive check as only this method may download
+   certificate (if needed), cache it, and check it with X509 certificate
+   path check algorithm. This method is therefore to be used as a default
+   verification mechanism, while stirshaken_check_identity_with_key(key)
+   and stirshaken_check_identity_with_cert(cert) are only for
+   completeness.
 
 2. Dependencies
 
@@ -338,16 +342,16 @@ modparam("stirshaken", "vs_cache_expire_s", 15)
 modparam("stirshaken", "vs_verify_x509_cert_path", 1)
 modparam("stirshaken", "vs_ca_dir", "/path/to/ca")
 modparam("stirshaken", "vs_cache_certificates", 1)
-modparam("stirshaken", "vs_cache_dir", "/tmp/cert_cache")
+modparam("stirshaken", "vs_cache_dir", "/path/to/cert_cache")
 modparam("stirshaken", "vs_cache_expire_s", 100)
 
 request_route {
     ...
-        if (1 == stirshaken_check_identity()) {
-                xlog("Shaken Identity is OK\n");
-        } else {
-        xlog("Shaken Identity is invalid\n");
-        }
+                if (1 == stirshaken_check_identity()) {
+                        xlog("Shaken Identity is OK\n");
+                } else {
+                        xlog("Shaken Identity is invalid\n");
+                }
     ...
 }
 ...
@@ -380,11 +384,11 @@ request_route {
 ...
 request_route {
         ...
-        if (1 == stirshaken_check_identity_with_key("/path/to/key")) {
-                xlog("Shaken Identity is OK\n");
-        } else {
-        xlog("Shaken Identity is invalid\n");
-        }
+                if (1 == stirshaken_check_identity_with_key("/path/to/key")) {
+                        xlog("Shaken Identity is OK\n");
+                } else {
+                        xlog("Shaken Identity is invalid\n");
+                }
         ...
 }
 ...
@@ -402,11 +406,11 @@ request_route {
 ...
 request_route {
         ...
-        if (1 == stirshaken_check_identity_with_cert("/path/to/cert")) {
-                xlog("Shaken Identity is OK\n");
-        } else {
-        xlog("Shaken Identity is invalid\n");
-        }
+                if (1 == stirshaken_check_identity_with_cert("/path/to/cert")) {
+                        xlog("Shaken Identity is OK\n");
+                } else {
+                        xlog("Shaken Identity is invalid\n");
+                }
         ...
 }
 ...
@@ -431,13 +435,13 @@ request_route {
 ...
 request_route {
         ...
-        if (1 == stirshaken_add_identity("https://sp.com/sp.pem", "B", "+44100",
- "+44200", "origid")) {
-                xlog("Shaken authentication added (SIP Identity Header created)\
-n");
-        } else {
-        xlog("Failed\n");
-        }
+                if (1 == stirshaken_add_identity("https://sp.com/sp.pem", "B", "
++44100", "+44200", "origid")) {
+                        xlog("Shaken authentication added (SIP Identity Header c
+reated)\n");
+                } else {
+                        xlog("Failed\n");
+                }
         ...
 }
 ...
@@ -450,13 +454,13 @@ n");
 ...
 request_route {
         ...
-        if (1 == stirshaken_add_identity("https://sp.com/sp.pem", "B", "+44100",
- "+44200", "")) {
-                xlog("Shaken authentication added (SIP Identity Header created)\
-n");
-        } else {
-        xlog("Failed\n");
-        }
+                if (1 == stirshaken_add_identity("https://sp.com/sp.pem", "B", "
++44100", "+44200", "")) {
+                        xlog("Shaken authentication added (SIP Identity Header c
+reated)\n");
+                } else {
+                        xlog("Failed\n");
+                }
         ...
 }
 ...
@@ -477,8 +481,13 @@ origid, keyPath)
 ...
 request_route {
         ...
-        stirshaken_add_identity_with_key("https://sp.com/sp.pem", "B", "+44100",
- "+44200", uuid, "/path/to/key");
+                if (1 == stirshaken_add_identity_with_key("https://sp.com/sp.pem
+", "B", "+44100", "+44200", uuid, "/path/to/key")) {
+                        xlog("Shaken authentication added (SIP Identity Header c
+reated)\n");
+                } else {
+                        xlog("Failed\n");
+                }
         ...
 }
 ...
